[package]
name = "rust-blog_"
version = "0.1.0"
authors = ["Alpha Olomi <alphaolomi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.17"
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "2.0.0"
alcoholic_jwt = "1.0.1"
reqwest = "0.11.4"
actix-rt = "2.2.0"